--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -22,7 +22,7 @@ code {
 }
 
 body {
-  background-color: rgb(116, 116, 206); 
+  background-color: rgb(202, 129, 86);
   text-decoration: none;
 }
 
@@ -31,18 +31,33 @@ body {
   height: 200px;
   width: 300px;
   justify-content: center;
+  margin-left: 40px;
 }
+
 .nav {
   text-decoration: none;
-
 }
 
 .flex {
   display: flex;
   flex-wrap: wrap;
+  
 }
 
 ul {
   list-style-type: none;
   justify-content: space-around;
+  padding: 20px 20px;
+  font-size: 1.5rem;
+  float: right;
+}
+
+li {
+  margin-right: 40px;
+}
+
+h1 {
+  font-size: 2rem;
+  padding: 20px 20px;
+  margin-left: 40px;
 }
