--- a/src/index.css
+++ b/src/index.css
@@ -7,23 +7,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 * {
   margin: 0;
   padding: 0;
   border: none;
   box-sizing: border-box;
   text-decoration: none;
-  color: black;
+  color: white;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", Monaco;
 }
 
 body {
-  background-color: rgb(202, 129, 86);
+  background-color: rgb(204, 120, 71);
   text-decoration: none;
+  margin: 2%;
+  padding: 1%;
 }
 
 .guled-pic {
@@ -32,6 +30,7 @@ body {
   width: 300px;
   justify-content: center;
   margin-left: 40px;
+  margin: 20px;
 }
 
 .nav {
@@ -41,13 +40,12 @@ body {
 .flex {
   display: flex;
   flex-wrap: wrap;
-  
 }
 
 ul {
   list-style-type: none;
   justify-content: space-around;
-  padding: 20px 20px;
+  padding: 25px 40px;
   font-size: 1.5rem;
   float: right;
 }
@@ -59,5 +57,5 @@ li {
 h1 {
   font-size: 2rem;
   padding: 20px 20px;
-  margin-left: 40px;
 }
+
