--- a/src/index.css
+++ b/src/index.css
@@ -13,24 +13,32 @@ body {
   border: none;
   box-sizing: border-box;
   text-decoration: none;
-  color: black;
+  color: rgb(0, 0, 0);
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", Monaco;
 }
 
 body {
-  background-color: rgb(204, 120, 71);
+  background-color: #7e7e7e;
   text-decoration: none;
-  margin: 2%;
-  padding: 1%;
 }
 
 .guled-pic {
-  display: flex;
-  height: 200px;
-  width: 300px;
+  display: block;
+  height: 300px;
+  width: 400px;
   justify-content: center;
-  margin-left: 40px;
-  margin: 20px;
+  margin: auto;
+  border-radius: 90px;
+  margin-top: 30px;
+}
+
+.guled-name {
+  text-align: center;
+  background-color: rgb(45, 45, 53);
+}
+
+.about-me {
+
 }
 
 .nav {
@@ -42,46 +50,87 @@ body {
   flex-wrap: wrap;
 }
 
+a {
+  margin-left: 30px;
+}
+
 ul {
   list-style-type: none;
   justify-content: space-around;
   padding: 25px 40px;
   font-size: 1.5rem;
-  float: right;
-}
-
-li {
-  margin-right: 40px;
 }
 
 h1 {
   font-size: 2rem;
   padding: 20px 20px;
 }
+
+h2 {
+  padding: 30px;
+}
+
+h3 {
+  margin: 20px;
+}
+
 input {
   font-size: 2rem;
   border-radius: 4px;
-
 }
 
 form {
   width: 40%;
-
 }
 
 textarea {
   width: 500px;
   height: 100px;
-
-  font-size: 1rem
+  font-size: 1rem;
 }
 
 label {
   font-size: 1.5rem;
-   display: block;
+  display: block;
 }
 
 button {
   border-radius: 4px;
+}
 
+.icon {
+  width: 50px;
+  margin: 100px;
+}
+
+footer {
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.proj {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.proj-img {
+  height: 0%;
+  width: 50%;
+  border-width: 3px;
+  border-style: solid;
+  border-color: var(--primary-color);
+  margin: 20px;
+  min-width: 300px;
+  max-width: 300px;
+  width: 250px;
+  height: 250px;
+  border-radius: 20px;
+}
+
+.form-look {
+  margin: 40px
 }
