--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 }
 
 body {
-  background-color: #7e7e7e;
+  background-color: rgb(231,231,231);
   text-decoration: none;
 }
 
@@ -34,7 +34,15 @@ body {
 
 .guled-name {
   text-align: center;
-  background-color: rgb(45, 45, 53);
+  height: 180px;
+  background-image: url("../src/assets/nyc.jpg");
+  background-position: 70px;
+ 
+}
+.guled-name h1 {
+  color: white;
+  font-size: 3rem;
+  height: 20px;
 }
 
 .about-me {
