--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ body {
   width: 400px;
   justify-content: center;
   margin: auto;
-  border-radius: 100px;
+  border-radius: 20px;
   margin-top: 30px;
 }
 
@@ -42,26 +42,30 @@ body {
   color: white;
   font-size: 3rem;
   height: 20px;
+  padding: 50px;
 }
 
 .about-me {
   text-align: center;
+  margin: 0 auto;
 }
 
 .about-me p {
   padding: 30px;
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 50px;
   margin: 40px;
+  max-width: 1000px;
+  margin: 0 auto 40px;
+  margin-top: 50px;
 }
 
-.nav {
-  text-decoration: none;
-}
 
 .flex {
   display: flex;
   flex-wrap: wrap;
+  text-decoration: none;
+  border: 2px solid black;
 }
 
 .port-buttons a {
