--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   justify-content: center;
   margin: auto;
   border-radius: 20px;
-  margin-top: 30px;
+  margin-top: 70px;
 }
 
 .guled-name {
@@ -57,7 +57,7 @@ body {
   margin: 40px;
   max-width: 1000px;
   margin: 0 auto 40px;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 
@@ -143,8 +143,9 @@ button:hover {
 }
 
 .icon {
-  width: 50px;
+  width: 65px;
   margin: 80px;
+  display:inline;
 }
 
 .icon:hover {
@@ -189,9 +190,18 @@ footer {
   padding: 10px 10px;
 }
 
+
+
 .hover a:active {
   background-color: rgb(29, 29, 29);
   color: white;
   border-radius: 20px;
   padding: 10px 10px;
 }
+ 
+@media screen and (max-width: 738px) {
+ .icon{ width: 80px;
+  margin: 40px;
+ }
+}
+
