--- a/src/index.css
+++ b/src/index.css
@@ -165,13 +165,21 @@ footer {
   flex-direction: column;
   align-items: center;
 }
+.proj h3{
+text-align: center;
+margin-bottom: 50px;
+margin-top: 50px;
+}
+
+.proj h2{
+  margin-top: 50px;
+  }
 
 .proj-img {
   height: 0%;
   width: 50%;
   border-width: 3px;
   border-style: solid;
-  margin: 20px;
   min-width: 300px;
   max-width: 300px;
   width: 250px;
