--- a/src/index.css
+++ b/src/index.css
@@ -23,9 +23,10 @@ body {
 }
 
 .guled-pic {
-  display: block;
+  position: relative;
+  z-index: 5;
   height: 300px;
-  width: 400px;
+  width: 410px;
   justify-content: center;
   margin: auto;
   border-radius: 20px;
@@ -37,6 +38,15 @@ body {
   height: 180px;
   background-image: url("../src/assets/nyc.jpg");
   background-position: 70px;
+  position: fixed;
+  z-index: 999;
+  right: 0;
+  left: 0;
+  top: 0;
+}
+
+.hover {
+  padding-top: 167px;
 }
 .guled-name h1 {
   color: white;
@@ -48,6 +58,7 @@ body {
 .about-me {
   text-align: center;
   margin: 0 auto;
+  position: relative;
 }
 
 .about-me p {
@@ -65,20 +76,6 @@ body {
   flex-wrap: wrap;
   text-decoration: none;
   border: 2px solid black;
-}
-
-.port-buttons a {
-  margin-left: 30px;
-  background-color: rgb(29, 29, 29);
-  color: white;
-  border-radius: 4px;
-  font-size: 1.2rem;
-  padding: 10px 10px;
-}
-.port-buttons a:hover {
-  background-color: rgb(255, 255, 255);
-  color: black;
-  margin-top: 20px;
 }
 
 p {
@@ -162,32 +159,75 @@ footer {
   justify-content: center;
 }
 
-.proj {
-  justify-content: center;
+.projectsDiv {
+  width: 80%;
+  margin: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
-.proj h3 {
-  text-align: center;
-  margin-bottom: 50px;
-  margin-top: 50px;
+
+.proj {
+  width: 45%;
+  /* height: 40vh; */
+  position: relative;
+  margin: 20px auto;
+  text-align: left;
+  margin-top:60px
 }
 
 .proj h2 {
-  margin-top: 50px;
+  background-color: rgb(29, 29, 29);
+  width: fit-content;
+  color: white;
+  padding: 5px;
+  margin: 5px 0;
+  box-shadow: 5px 5px 5px lightgray;
+}
+
+.proj p {
+  color: white;
+  padding: 0;
+  margin: 0 0 15px 0;
+  font-size: medium;
 }
 
 .proj-img {
-  height: 0%;
-  width: 50%;
+  width: 80%;
+  height: 350px;
   border-width: 3px;
   border-style: solid;
-  min-width: 300px;
-  max-width: 300px;
-  width: 250px;
-  height: 250px;
   border-radius: 20px;
+}
+
+.port-buttons {
+  background: black;
+  color: white;
+  position: absolute;
+  bottom: 8%;
+  left: 5%;
+  width: 60%;
+  height: 170px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 8px;
+  opacity: 0.85;
+  box-shadow: 5px 5px 5px lightgray;
+}
+
+.port-buttons a {
+  background-color: rgb(29, 29, 29);
+  color: white;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  padding: 10px;
+  margin-right: 30px;
+  box-shadow: 3px 3px 3px lightgray;
+}
+.port-buttons a:hover {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  margin-top: 20px;
 }
 
 .hover a:hover {
@@ -205,6 +245,19 @@ footer {
 }
 
 @media screen and (max-width: 738px) {
+  .projectsDiv {
+    width: 75%;
+    margin: auto;
+    margin-top: 30px
+  }
+  .proj {
+    width: 100%;
+    margin: 10px auto;
+  }
+
+  .proj img {
+    width: 100%;
+  }
   .icon {
     width: 80px;
     margin: 40px;
@@ -212,6 +265,18 @@ footer {
 }
 
 @media screen and (max-width: 485px) {
+  .projectsDiv {
+    width: 95%;
+    margin: auto;
+  }
+  .proj {
+    width: 100%;
+    margin: 10px auto;
+  }
+
+  .proj img {
+    width: 100%;
+  }
   .icon {
     width: 60px;
     margin: 40px;
