--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,7 @@ body {
   right: 0;
   left: 0;
   top: 0;
+  color:white
 }
 
 .hover {
@@ -55,13 +56,22 @@ body {
   padding: 50px;
 }
 
+.title {
+  color:rgb(29, 29, 29);
+  font-size: 3rem;
+  height: 20px;
+  padding: 50px;
+  border: none;
+  margin-top: -40px
+}
+
 .about-me {
   text-align: center;
   margin: 0 auto;
   position: relative;
 }
 
-.about-me p {
+.borderp p {
   padding: 30px;
   border: 2px solid black;
   border-radius: 50px;
