--- a/src/index.css
+++ b/src/index.css
@@ -79,13 +79,22 @@ body {
   max-width: 1000px;
   margin: 0 auto 40px;
   margin-top: 20px;
+  text-align: left;
+}
+
+.borderp {
+  padding: 0px 5px 0px 5px;
 }
 
 .flex {
   display: flex;
   flex-wrap: wrap;
   text-decoration: none;
-  border: 2px solid black;
+  border: 1px solid black;
+  margin-top: 13px;
+}
+.flex a {
+  padding: 10px;
 }
 
 p {
@@ -123,7 +132,7 @@ input {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 70px;
+  margin-top: 2px;
 }
 
 textarea {
@@ -182,11 +191,12 @@ footer {
   /* height: 40vh; */
   position: relative;
   margin: auto;
-  text-align: center;
-  margin-top: 60px;
+  text-align: left;
+  margin-top: 10px;
   display: flex;
   max-width: 600px;
   min-width: 400px;
+  justify-content: center;
 }
 
 .proj h2 {
@@ -210,6 +220,11 @@ footer {
   height: 350px;
   border-width: 3px;
   border-radius: 10px;
+  border: solid 1px;
+}
+.Projh {
+  text-align: center;
+  margin-top: 20px;
 }
 
 .port-buttons {
@@ -217,13 +232,13 @@ footer {
   color: white;
   position: absolute;
   bottom: 6%;
-  left: 4%;
   width: 60%;
   height: 170px;
   padding: 10px;
   border-radius: 10px;
   opacity: 0.85;
   box-shadow: 1px 1px 1px lightgray;
+  margin-right: 80px;
 }
 
 .port-buttons a {
@@ -235,6 +250,9 @@ footer {
   margin-right: 30px;
   box-shadow: 1px 1px 1px lightgray;
 }
+.port-buttons p {
+  text-align: left;
+}
 .port-buttons a:hover {
   background-color: rgb(255, 255, 255);
   color: black;
@@ -244,15 +262,8 @@ footer {
 .hover a:hover {
   background-color: rgb(29, 29, 29);
   color: white;
-  border-radius: 20px;
-  padding: 10px 10px;
-}
-
-.hover a:active {
-  background-color: rgb(29, 29, 29);
-  color: white;
-  border-radius: 20px;
-  padding: 10px 10px;
+  border-radius: 10px;
+  padding: 4px 10px 2px 10px;
 }
 
 @media screen and (max-width: 1400px) {
@@ -265,7 +276,6 @@ footer {
     margin: 10px auto;
     margin-top: 70px;
   }
-
   .proj img {
     width: 100%;
   }
@@ -275,11 +285,22 @@ footer {
   }
 }
 
+@media screen and (max-width: 1104px) {
+  .projectsDiv h2 {
+    font-size: 16px;
+  }
+  .port-buttons a {
+    font-size: 13px;
+  }
+  .port-buttons p {
+    font-size: 14px;
+  }
+}
+
 @media screen and (max-width: 738px) {
   .projectsDiv {
-    width: 75%;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 70px;
   }
   .proj {
     width: 100%;
@@ -295,14 +316,33 @@ footer {
   }
 }
 
+@media screen and (max-width: 528px) {
+  .form-look {
+    margin-right: auto;
+    margin-left: auto;
+    width: 90px;
+    text-align: center;
+  }
+  .form-look input {
+    width: 300px;
+  }
+  .form-look textarea {
+    width: 300px;
+  }
+}
+
 @media screen and (max-width: 426px) {
   .icon {
     width: 40px;
   }
   .about-me {
-    padding: 20px;
+    padding: 0px 20px 0px 20px;
   }
   .guled-pic {
     width: 100%;
+  }
+  .projectsDiv img {
+    width: 379px;
+    margin: auto;
   }
 }
